--- a/demo/package.json
+++ b/demo/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tailwindcss/vite": "^4.1.18",
     "autoprefixer": "^10.4.24",
+    "driver.js": "^1.4.0",
     "lucide-react": "^0.564.0",
     "postcss": "^8.5.6",
     "react": "^19.2.0",
